--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="src/assets/css/fonts.css">
     <link rel="stylesheet" href="src/assets/css/reset.css">
+    <link rel="stylesheet" href="src/assets/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posterr</title>
   </head>
